--- a/3 Architektur/energiemanagement-dashboard/package.json
+++ b/3 Architektur/energiemanagement-dashboard/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "lite-server",
-    "dev": "vite",
+  "dev": "vite",
+  "start": "vite",
     "test": "jest"
   },
   "keywords": [],
