--- a/3 Architektur/energiemanagement-dashboard/Dockerfile
+++ b/3 Architektur/energiemanagement-dashboard/Dockerfile
@@ -1,18 +1,12 @@
-# 1. Schritt: Image vorbereiten
 FROM node:20
-
-# 2. Arbeitsverzeichnis im Container
 WORKDIR /app
 
-# 3. Kopiere package.json und installiere dependencies
 COPY package*.json ./
+COPY bs-config.json ./
 RUN npm install
 
-# 4. Kopiere den gesamten Code
 COPY . .
 
-# 5. Baue TypeScript falls nötig (hier nur optional)
-RUN npm run build
+EXPOSE 5173
 
-# 6. Starte das Projekt z.B. mit lite-server
-CMD ["npm", "run", "start"]
+CMD ["npm", "start"]
