--- a/3 Architektur/energiemanagement-dashboard/.github/workflows/ci.yml
+++ b/3 Architektur/energiemanagement-dashboard/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test and Build EnergieDashboard
+name: CI Pipeline for EnergieDashboard
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: 📥 Checkout Code
         uses: actions/checkout@v3
 
-      - name: 🔧 Node.js Setup
+      - name: 🛠 Node.js Setup
         uses: actions/setup-node@v3
         with:
           node-version: 20
