--- a/3 Architektur/energiemanagement-dashboard/Dockerfile
+++ b/3 Architektur/energiemanagement-dashboard/Dockerfile
@@ -1,12 +1,19 @@
 FROM node:20
+
 WORKDIR /app
 
+# Install dependencies
 COPY package*.json ./
-COPY bs-config.json ./
 RUN npm install
 
+# Copy source code
 COPY . .
 
+# Build (falls du TS kompilieren willst – optional)
+RUN npm run build
+
+# Expose Vite dev server port
 EXPOSE 5173
 
+# Start Vite dev server
 CMD ["npm", "start"]
