--- a/3 Architektur/energiemanagement-dashboard/package.json
+++ b/3 Architektur/energiemanagement-dashboard/package.json
@@ -25,7 +25,9 @@
   },
   "lite-server": {
     "server": {
-      "baseDir": "./public"
+      "baseDir": "./public",
+      "host": "0.0.0.0",
+      "port": 3000
     }
   }
 }
