--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: 🛠 Node.js Setup
+      - name: Node.js Setup
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -24,12 +24,12 @@ jobs:
       - name: Abhängigkeiten installieren
         run: npm install
 
-      - name:  Tests ausführen
+      - name: Unit-Tests ausführen
         run: npm test
 
   docker:
-    needs: test
     runs-on: ubuntu-latest
+    needs: test
     defaults:
       run:
         working-directory: '3 Architektur/energiemanagement-dashboard'
@@ -38,11 +38,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Docker Image bauen
-        run: docker build -t kimia-dashboard .
+        run: docker build -t energiemanagement-dashboard .
 
   deploy:
-    needs: test
     runs-on: ubuntu-latest
+    needs: test
     defaults:
       run:
         working-directory: '3 Architektur/energiemanagement-dashboard'
@@ -54,4 +54,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: './public'
