--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,9 +30,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: test
-    defaults:
-      run:
-        working-directory: '3 Architektur/energiemanagement-dashboard'
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -41,4 +39,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: public
+          publish_dir: '3 Architektur/energiemanagement-dashboard/public'
